Creacion de paginas, para listar las app

--- a/src/app/auth/pages/layout-page/layout-page.component.html
+++ b/src/app/auth/pages/layout-page/layout-page.component.html
@@ -28,10 +28,10 @@
                 <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
                     <ul class="nav justify-contend">
                         <li class="nav-item">
-                          <a class="nav-link" href="/auth/login">Iniciar Sesion</a>
+                          <a class="nav-link" routerLink="/auth/login">Iniciar Sesion</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="/auth/register">Registrarse</a>
+                          <a class="nav-link" routerLink="/auth/register">Registrarse</a>
                         </li>
                        
                       </ul>
