--- a/src/app/main/pages/tecnology/tecnology.component.html
+++ b/src/app/main/pages/tecnology/tecnology.component.html
@@ -33,11 +33,42 @@
               </div>
               <div class="col-12 col-md-9 bg-info opacity-75 rounded p-2">
                 <p>Para aplicaciones web complejas y de alto rendimiento con facilidad, 
-                    garantizando una experiencia de usuario excepcional en todos los dispositvos 
+                    garantizando una experiencia de usuario excepcional en todos los dispositvos.
                    </p>
               </div>
             </div>
           </div>
         </div>
+    </div>
+    <div class="col-12 col-lg-12">
+      <div class="card border-0">
+        <div class="card-body p-4 p-xxl-5">
+          <div class="row align-items-center">
+            <div class="col-12 col-md-3 p-2">
+             <img src="./../../../../assets/images/powerapps.jpg" width="150" height="90">
+            </div>
+            <div class="col-12 col-md-9 bg-info opacity-75 rounded p-2">
+              <p>Para crear rapidamente aplicaciones personalizadas que se integren perfectamente con tus sistemas existentes, aumentando la productividad
+                y la eficiencia en toda la organización.
+                 </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-12 col-lg-12">
+      <div class="card border-0">
+        <div class="card-body p-4 p-xxl-5">
+          <div class="row align-items-center">
+            <div class="col-12 col-md-3 p-2 text-center">
+             <img src="./../../../../assets/images/appian.png" width="80" height="60">
+            </div>
+            <div class="col-12 col-md-9 bg-info opacity-75 rounded p-2">
+              <p>Para diseñar, ejecutar y optimizar procesos empresariales complejos de manera rápida y sencilla
+                 </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
