--- a/src/app/main/pages/layout-page/layout-page.component.html
+++ b/src/app/main/pages/layout-page/layout-page.component.html
@@ -1,98 +1,13 @@
-<div id="content-wrapper" class="d-flex flex-column bsb-navbar bsb-tpl-navbar-sticky ">
-    <div id="content">
-        <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow border-bottom border-info">
-            <div class="col-xl-2 col-md-2">
-                <div class="card border border-info shadow  bg-info">
-                    <div class="card-body">
-                        <div class="row">
-                            <div class="col mr-2">
-                              <a href="auth/" class="list-group-item">
-                                <div class="row">
-                                  <div class="col-auto">
-                                      <div class="h5 mb-0 mr-3 font-weight-bold text-right">
-                                          Paola <br>Cotrina</div>
-                                  </div>
-                              </div>
-                              </a>
-                                
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-8 col-md-6 p-3">
-                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">Desarrollo a la medida</div>
-            </div>
-            <div class="col-xl-2 col-md-4 p-3">
-                <div class="h5 mb-0 mr-3 font-weight-bold text-gray-800">
-                    <p class="nav justify-contend">
-                        John Doe
-                       
-                    </p>
-                </div>
-            </div>
-        </nav>
-    </div>
-</div>
+<app-header-main></app-header-main>
 
 <div class="row">
-    <div class="col-md-3 col-lg-3 h-100  shadow-sm  bg-white rounded">
-        <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-light" >
-            
-            <ul class="nav nav-pills flex-column mb-auto">
-            <li class="border-bottom border-info">
-                <a href="#" class="nav-link text-secondary">
-                <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                Tecnologías
-                </a>
-            </li>
-            <li class="border-bottom border-info">
-                <a href="#" class="nav-link text-secondary">
-                <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                Mis aplicaciones
-                </a>
-            </li>
-            <li class="border-bottom border-info">
-                <a href="#" class="nav-link text-secondary">
-                <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"></use></svg>
-                Solicitudes
-                </a>
-            </li>
-            <li class="border-bottom border-info">
-                <a href="#" class="nav-link text-secondary">
-                <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"></use></svg>
-                Soporte
-                </a>
-            </li>
-            </ul>
-            <div class="mt-3">
-                <ul class="nav nav-pills flex-column mb-auto">
-                   
-                    <li class="border-bottom border-info">
-                        <a href="#" class="nav-link text-secondary">
-                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"></use></svg>
-                        Contacto
-                        </a>
-                    </li>
-                  
-                </ul>
-            </div>
-        </div>
-        
+    <div class="col-md-3 col-lg-3 shadow-sm  bg-white rounded">
+        <app-menu></app-menu>
     </div>
     <div class="col-12 col-lg-9">
         <router-outlet></router-outlet>
     </div>
 
 </div>  
-<div class="py-2 py-md-2 py-xl-8 border-top border-accent-subtle">
-    <div class="container-fluid overflow-hidden">
-      <div class="row ">
-          <div class="copyright text-center text-md-center">
-           Paola Cotrina | &copy; 2024. Front End. <br> 
-           <strong>Desarrollo a la medida</strong> 
-          </div>
-      </div>
-    </div>
-  </div>
+<app-footer></app-footer>
 
