--- a/src/app/main/pages/list-app/list-app.component.html
+++ b/src/app/main/pages/list-app/list-app.component.html
@@ -1,1 +1,39 @@
-<p>list-app works!</p>
+
+<div class="row gy-4 gy-md-5 gy-lg-0">
+    <h4 class="border-bottom border-info col-md-2 p-2">Mis aplicaciones</h4>
+      <div class="col-12 col-lg-12 mt-5">
+        <table class="table table-sm">
+            <thead>
+              <tr>
+                <th scope="col"></th>
+                <th scope="col">Proyecto</th>
+                <th scope="col">Cliente</th>
+                <th scope="col">Etapa</th>
+                <th scope="col">Fecha Inicio</th>
+              </tr>
+            </thead>
+            <tbody >
+              <tr *ngFor="let app of apps">
+                <th scope="row">
+                  <app-image-technology [idTecnology]="app.tecnology[0].id"></app-image-technology>
+                </th>
+                <td>{{ app.name }}</td>
+                <td>{{ app.customer[0].name }}</td>
+                <td>{{ app.stageRequest[0].description }}</td>
+                <td>{{ app.startDate }}</td>
+                <td> 
+                  <button class="btn btn-light btn-sm" [routerLink]="['/main/editar', app.id]"> 
+                  <svg fill="#000000" width="20" height="20" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M21,12a1,1,0,0,0-1,1v6a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V5A1,1,0,0,1,5,4h6a1,1,0,0,0,0-2H5A3,3,0,0,0,2,5V19a3,3,0,0,0,3,3H19a3,3,0,0,0,3-3V13A1,1,0,0,0,21,12ZM6,12.76V17a1,1,0,0,0,1,1h4.24a1,1,0,0,0,.71-.29l6.92-6.93h0L21.71,8a1,1,0,0,0,0-1.42L17.47,2.29a1,1,0,0,0-1.42,0L13.23,5.12h0L6.29,12.05A1,1,0,0,0,6,12.76ZM16.76,4.41l2.83,2.83L18.17,8.66,15.34,5.83ZM8,13.17l5.93-5.93,2.83,2.83L10.83,16H8Z"/></svg>
+                 </button> 
+                 <button class="btn btn-light btn-sm" routerLink="/main/"> 
+                  <svg fill="#000000" width="20" height="20" viewBox="0 0 24 24" id="update" data-name="Flat Line" xmlns="http://www.w3.org/2000/svg" class="icon flat-line"><path id="primary" d="M4,12A8,8,0,0,1,18.93,8" style="fill: none; stroke: rgb(0, 0, 0); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path><path id="primary-2" data-name="primary" d="M20,12A8,8,0,0,1,5.07,16" style="fill: none; stroke: rgb(0, 0, 0); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></path><polyline id="primary-3" data-name="primary" points="14 8 19 8 19 3" style="fill: none; stroke: rgb(0, 0, 0); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></polyline><polyline id="primary-4" data-name="primary" points="10 16 5 16 5 21" style="fill: none; stroke: rgb(0, 0, 0); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></polyline></svg>
+                </button> 
+                </td>
+              </tr>
+             
+            </tbody>
+          </table>
+      </div>
+    </div>
+
+
