--- a/src/app/main/pages/new-app/new-app.component.html
+++ b/src/app/main/pages/new-app/new-app.component.html
@@ -2,20 +2,33 @@
     <h4 class="border-bottom border-info col-md-6 p-2">Solicitudes / Registrar datos básicos</h4>
       <div class="col-12 col-lg-12 p-1">
         <div class="bg-accent shadow rounded overflow-hidden">
-          <form action="#!">
+          <form [formGroup]="appForm" (ngSubmit)="onSubmit()">
             <div class="row gy-4 gy-xl-5  p-xl-5 border border-info">
                 <div class="col-md-2">
                     <label class="h6">Nombre del proyecto*:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-4">
                     <input 
                     type="text" 
                     class="form-control" 
-                    id="fullname" 
-                    name="fullname" 
-                    value="" 
                     required 
+                    formControlName="name"
                     >
+                </div>
+                <div class="col-md-2">
+                    <label class="h6">Tecnologia*:</label>
+                </div>
+                <div class="col-md-4">
+                    <select 
+                    type="date" 
+                    class="form-control" 
+                    required 
+                    formControlName="tecnology"
+                    >
+                    <option *ngFor="let tec of tecnology" [value]="tec.id">
+                        {{tec.description}}
+                    </option>
+                    </select>
                 </div>
                 <div class="col-md-2">
                     <label class="h6">Cliente*:</label>
@@ -24,10 +37,8 @@
                     <input 
                     type="text" 
                     class="form-control" 
-                    id="fullname" 
-                    name="fullname" 
-                    value="" 
                     required 
+                    formControlName="nameCustomer"
                     >
                 </div>
                 <div class="col-md-2">
@@ -37,11 +48,20 @@
                     <input 
                     type="text" 
                     class="form-control" 
-                    id="fullname" 
-                    name="fullname" 
-                    value="" 
                     required 
-                    >
+                    formControlName="phoneCustomer"
+                    />
+                </div>
+                <div class="col-md-2">
+                    <label class="h6">Correo electronico*:</label>
+                </div>
+                <div class="col-md-10">
+                    <input 
+                    type="text" 
+                    class="form-control" 
+                    required 
+                    formControlName="emailCustomer"
+                    />
                 </div>
                 <div class="col-md-2">
                     <label class="h6">Fecha inicio*:</label>
@@ -50,11 +70,9 @@
                     <input 
                     type="date" 
                     class="form-control" 
-                    id="fullname" 
-                    name="fullname" 
-                    value="" 
                     required 
-                    >
+                    formControlName="startDate"
+                    />
                 </div>
                 <div class="col-md-2">
                     <label class="h6">Fecha fin*:</label>
@@ -63,11 +81,9 @@
                     <input 
                     type="date" 
                     class="form-control" 
-                    id="fullname" 
-                    name="fullname" 
-                    value="" 
                     required 
-                    >
+                    formControlName="end"
+                    />
                 </div>
                 <div class="col-md-2">
                     <label class="h6">Estado*:</label>
@@ -76,10 +92,8 @@
                     <select 
                     type="date" 
                     class="form-control" 
-                    id="fullname" 
-                    name="fullname" 
-                    value="" 
                     required 
+                    formControlName="stage"
                     >
                     <option *ngFor="let stage of stages" [value]="stage.id">
                         {{stage.description}}
