--- a/src/app/main/pages/new-app/new-app.component.html
+++ b/src/app/main/pages/new-app/new-app.component.html
@@ -15,21 +15,7 @@
                     formControlName="name"
                     >
                 </div>
-                <div class="col-md-2">
-                    <label class="h6">Tecnologia*:</label>
-                </div>
-                <div class="col-md-4">
-                    <select 
-                    type="date" 
-                    class="form-control" 
-                    required 
-                    formControlName="tecnology"
-                    >
-                    <option *ngFor="let tec of tecnology" [value]="tec.id">
-                        {{tec.description}}
-                    </option>
-                    </select>
-                </div>
+               
                 <div class="col-md-2">
                     <label class="h6">Cliente*:</label>
                 </div>
@@ -55,7 +41,7 @@
                 <div class="col-md-2">
                     <label class="h6">Correo electronico*:</label>
                 </div>
-                <div class="col-md-10">
+                <div class="col-md-4">
                     <input 
                     type="text" 
                     class="form-control" 
@@ -63,49 +49,74 @@
                     formControlName="emailCustomer"
                     />
                 </div>
-                <div class="col-md-2">
-                    <label class="h6">Fecha inicio*:</label>
+                
+                
+                    <div class="col-md-2">
+                        <label class="h6">Estado*:</label>
+                    </div>
+                    <div class="col-md-4">
+                        <select 
+                        type="date" 
+                        class="form-control" 
+                        required 
+                        formControlName="stage"
+                        [(ngModel)]="opcionSeleccionada"
+                        >
+                        <option *ngFor="let stage of stages" [value]="stage.id">
+                            {{stage.description}}
+                        </option>
+                        </select>
+                    </div>
+                   
+                    <div class="row" *ngIf="opcionSeleccionada == '3'">
+                    <div class="col-md-2">
+                        <label class="h6">Tecnologia*:</label>
+                    </div>
+                    <div class="col-md-4">
+                        <select 
+                        type="date" 
+                        class="form-control" 
+                        required 
+                        formControlName="tecnology"
+                        >
+                        <option *ngFor="let tec of tecnology" [value]="tec.id">
+                            {{tec.description}}
+                        </option>
+                        </select>
+                    </div>
+                    <div class="col-md-2">
+                        <label class="h6">Fecha inicio*:</label>
+                    </div>
+                    <div class="col-md-4">
+                        <input 
+                        type="date" 
+                        class="form-control" 
+                        required 
+                        formControlName="startDate"
+                        />
+                    </div>
+                    <div class="col-md-2">
+                        <label class="h6">Fecha fin*:</label>
+                    </div>
+                    <div class="col-md-4">
+                        <input 
+                        type="date" 
+                        class="form-control" 
+                        required 
+                        formControlName="end"
+                        />
+                    </div>
                 </div>
-                <div class="col-md-4">
-                    <input 
-                    type="date" 
-                    class="form-control" 
-                    required 
-                    formControlName="startDate"
-                    />
-                </div>
-                <div class="col-md-2">
-                    <label class="h6">Fecha fin*:</label>
-                </div>
-                <div class="col-md-4">
-                    <input 
-                    type="date" 
-                    class="form-control" 
-                    required 
-                    formControlName="end"
-                    />
-                </div>
-                <div class="col-md-2">
-                    <label class="h6">Estado*:</label>
-                </div>
-                <div class="col-md-4">
-                    <select 
-                    type="date" 
-                    class="form-control" 
-                    required 
-                    formControlName="stage"
-                    >
-                    <option *ngFor="let stage of stages" [value]="stage.id">
-                        {{stage.description}}
-                    </option>
-                    </select>
-                </div>
+                
+                
                 <div class="col-md-6 d-flex justify-content-center align-items-center">
                     <button class="btn btn-info text-light w-100" type="submit">Guardar</button>
                 </div>
             </div>
           </form>
-
+          <div *ngIf="message" class="alert alert-success" role="alert">
+            Proyecto creado
+          </div>
           <div class="bg-accent shadow rounded overflow-hidden mt-2 row ">
             <div class="col-md-6 p-5">
                 <table class="table table-sm">
