Ajuste de color de header y footer

--- a/src/app/auth/pages/home/home.component.html
+++ b/src/app/auth/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <main role="main">
     
     <div class="card">
-        <img class="card-img-top"  src="../../../../assets/images/home.jpg" alt="Generic placeholder image" width="100%" height="400">
+        <img class="card-img-top"  src="../../../../assets/images/home.jpg" width="100%" height="800">
         <div class="card-body card-img-overlay card-inverse shadow "> 
             <div class="col-auto p-2 text-center" >
                 <div class="z-index-2 h5 mb-0 mr-3 font-weight-bold text-right d-flex flex-row-reverse p-5 py-2 m-0 vh-100 row justify-content-center align-items-center">
@@ -83,8 +83,8 @@
     <div class="row gy-4 gy-md-5 gy-lg-0 p-5" 
     style="
     background-image: url('../../../../assets/images/Registro.jpg');
-    height: 100vh;
-  ">
+  "
+  width="100%" height="800">
      
       <div class="col-12 col-lg-6" >
         <h2 class="text-light">Contáctanos</h2>
