--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -1,21 +1,19 @@
 <div id="content-wrapper" class="d-flex flex-column bsb-navbar bsb-tpl-navbar-sticky ">
     <div id="content">
-        <nav class="navbar navbar-expand navbar-light bg-white topbar mb-4 static-top shadow border-bottom border-info">
+        <nav class="navbar navbar-expand navbar-light topbar mb-4 static-top shadow border-bottom border-info" style="background-color: #f2f2f2;">
             <div class="col-xl-2 col-md-2">
-                <div class="card border border-info shadow  bg-info">
+                <div class="card border shadow" style="background-color: #d6f4fe; border-color: #d6f4fe;">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col mr-2">
-                              <a href="auth/" class="list-group-item">
+                          <div class="col">
+                            <a href="auth/" class="list-group-item">
                                 <div class="row">
-                                  <div class="col-auto">
-                                      <div class="h5 mb-0 mr-3 font-weight-bold text-right">
-                                          Paola <br>Cotrina</div>
-                                  </div>
-                              </div>
-                              </a>
-                                
-                            </div>
+                                    <div class="col " style="text-align: right;">
+                                        <div class="h5 mb-0 font-weight-bold">Paola <br> Cotrina</div>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
                         </div>
                     </div>
                 </div>
