--- a/src/app/main/components/menu/menu.component.html
+++ b/src/app/main/components/menu/menu.component.html
@@ -1,24 +1,24 @@
 
-    <div class="d-flex flex-column flex-shrink-0 p-3 text-white bg-light" >
-        <ul class="nav nav-pills flex-column mb-auto">
+    <div class="d-flex flex-column p-3 h-100" style="background-color: #f2f2f2;" >
+        <ul class="nav nav-pills flex-column mb-auto text-secondary">
         <li class="border-bottom border-info">
-            <a routerLink="/main/tecnologia" class="nav-link text-secondary">
-            Tecnologías
+            <a routerLink="/main/tecnologia" class="nav-link text-dark ">
+            <strong>Tecnologías</strong> 
             </a>
         </li>
         <li class="border-bottom border-info">
-            <a routerLink="/main/listApp" class="nav-link text-secondary">
-            Mis aplicaciones
+            <a routerLink="/main/listApp" class="nav-link text-dark">
+                <strong>Mis aplicaciones</strong> 
             </a>
         </li>
         <li class="border-bottom border-info">
-            <a routerLink="/main/solicitudes" class="nav-link text-secondary">
-            Solicitudes
+            <a routerLink="/main/solicitudes" class="nav-link text-dark">
+                <strong>Solicitudes</strong> 
             </a>
         </li>
         <li class="border-bottom border-info">
-            <a routerLink="/main/soporte" class="nav-link text-secondary">
-            Soporte
+            <a routerLink="/main/soporte" class="nav-link text-dark">
+                <strong>Soporte</strong> 
             </a>
         </li>
         </ul>
@@ -26,8 +26,8 @@
             <ul class="nav nav-pills flex-column mb-auto">
                
                 <li class="border-bottom border-info">
-                    <a routerLink="#" class="nav-link text-secondary">
-                    Contacto
+                    <a routerLink="#" class="nav-link text-dark">
+                        <strong>Contacto</strong> 
                     </a>
                 </li>
             </ul>
