--- a/src/app/main/pages/new-app/new-app.component.html
+++ b/src/app/main/pages/new-app/new-app.component.html
@@ -68,11 +68,11 @@
                         </select>
                     </div>
                    
-                    <div class="row" *ngIf="opcionSeleccionada == '3'">
-                    <div class="col-md-2">
+                    <div class="row p-xl-2" *ngIf="opcionSeleccionada == '3'">
+                    <div class="col-md-2 p-2">
                         <label class="h6">Tecnologia*:</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 p-2">
                         <select 
                         type="date" 
                         class="form-control" 
@@ -84,10 +84,10 @@
                         </option>
                         </select>
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 p-2">
                         <label class="h6">Fecha inicio*:</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 p-2">
                         <input 
                         type="date" 
                         class="form-control" 
@@ -95,10 +95,10 @@
                         formControlName="startDate"
                         />
                     </div>
-                    <div class="col-md-2">
+                    <div class="col-md-2 p-2">
                         <label class="h6">Fecha fin*:</label>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 p-2">
                         <input 
                         type="date" 
                         class="form-control" 
