--- a/src/app/main/pages/tecnology/tecnology.component.html
+++ b/src/app/main/pages/tecnology/tecnology.component.html
@@ -17,7 +17,7 @@
               <div class="col-12 col-md-3 p-2">
                <img src="./../../../../assets/images/react.png" width="160" height="100">
               </div>
-              <div class="col-12 col-md-9 bg-info opacity-75 rounded p-2">
+              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
                 <p>Para aplicaciones web dinámicas y altamente interactivas que cautiven a tus usuarios y se destaquen en el mercado </p>
               </div>
             </div>
@@ -31,7 +31,7 @@
               <div class="col-12 col-md-3 p-2">
                <img src="./../../../../assets/images/angular.png" width="150" height="90">
               </div>
-              <div class="col-12 col-md-9 bg-info opacity-75 rounded p-2">
+              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
                 <p>Para aplicaciones web complejas y de alto rendimiento con facilidad, 
                     garantizando una experiencia de usuario excepcional en todos los dispositvos.
                    </p>
@@ -47,7 +47,7 @@
             <div class="col-12 col-md-3 p-2">
              <img src="./../../../../assets/images/powerapps.jpg" width="150" height="90">
             </div>
-            <div class="col-12 col-md-9 bg-info opacity-75 rounded p-2">
+            <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
               <p>Para crear rapidamente aplicaciones personalizadas que se integren perfectamente con tus sistemas existentes, aumentando la productividad
                 y la eficiencia en toda la organización.
                  </p>
@@ -63,7 +63,7 @@
             <div class="col-12 col-md-3 p-2 text-center">
              <img src="./../../../../assets/images/appian.png" width="80" height="60">
             </div>
-            <div class="col-12 col-md-9 bg-info opacity-75 rounded p-2">
+              <div class="col-12 col-md-9 rounded p-2"  style="background-color: #d6f4fe">
               <p>Para diseñar, ejecutar y optimizar procesos empresariales complejos de manera rápida y sencilla
                  </p>
             </div>
@@ -71,4 +71,8 @@
         </div>
       </div>
     </div>
+    <p>Con estas tecnologias a tu disposicion, tu empresa estará lista para 
+      enfrentar los desafios del mundo digital y alcanzar nuevos niveles de
+      exito!
+    </p>
   </div>
