--- a/src/app/auth/pages/login-page/login-page.component.html
+++ b/src/app/auth/pages/login-page/login-page.component.html
@@ -32,7 +32,7 @@
               
               <div class="col-12">
                 <div class="d-grid">
-                  <button class="btn btn-primary btn-lg" type="submit">Ingresar</button>
+                  <button class="btn btn-primary btn-lg" type="submit" (click)="onLogin()">Ingresar</button>
                 </div>
               </div>
             </div>
