--- a/src/app/main/components/footer/footer.component.html
+++ b/src/app/main/components/footer/footer.component.html
@@ -1,9 +1,8 @@
-<div class="py-2 py-md-2 py-xl-8 border-top border-accent-subtle">
+<div class="py-2 py-md-2 py-xl-8 border-top border-accent-subtle" style="background-color: #d6f4fe">
     <div class="container-fluid overflow-hidden">
       <div class="row ">
-          <div class="copyright text-center text-md-center">
-           Paola Cotrina | &copy; 2024. Front End. <br> 
-           <strong>Desarrollo a la medida</strong> 
+          <div class="copyright text-center text-md-end">
+           Paola Cotrina | &copy; 2024. Front End. 
           </div>
       </div>
     </div>
