--- a/src/app/main/pages/edit-app/edit-app.component.html
+++ b/src/app/main/pages/edit-app/edit-app.component.html
@@ -55,7 +55,7 @@
                     <div class="col-md-4">
                         <select 
                         type="date" 
-                        class="form-control"  
+                        class="form-select"  
                         required 
                         formControlName="modulo"
                         >
@@ -66,7 +66,7 @@
                     </div>
                 
                     <div class="col-md-6 d-flex justify-content-center align-items-center">
-                        <button class="btn btn-info text-light w-100" type="submit">Guardar</button>
+                        <button class="btn text-light w-100" type="submit" style="background-color: #2cc4f5;">Guardar</button>
                     </div>
                 </div>
             </form>
@@ -76,7 +76,7 @@
             </div>
 
 
-            <app-hu-module [hus]="app.hu"></app-hu-module>
+            <app-hu-module [hus]="app.hu" [app]="app"></app-hu-module>
         
         </div>
     </div>
