--- a/src/app/main/pages/hu-app/hu-app.component.html
+++ b/src/app/main/pages/hu-app/hu-app.component.html
@@ -1,22 +1,52 @@
 
 <div class="row gy-4 gy-md-5 gy-lg-0">
       <div class="col-12 col-lg-12 mt-5">
+        <div class="row p-2 mb-2">
+          <div class="col-md-1">
+              <svg fill="#000000" width="20px" height="20px" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" data-name="Layer 1">
+                  <path d="M21.07,16.83,19,14.71a3.08,3.08,0,0,0-3.4-.57l-.9-.9a7,7,0,1,0-1.41,1.41l.89.89A3,3,0,0,0,14.71,19l2.12,2.12a3,3,0,0,0,4.24,0A3,3,0,0,0,21.07,16.83Zm-8.48-4.24a5,5,0,1,1,0-7.08A5,5,0,0,1,12.59,12.59Zm7.07,7.07a1,1,0,0,1-1.42,0l-2.12-2.12a1,1,0,0,1,0-1.42,1,1,0,0,1,1.42,0l2.12,2.12A1,1,0,0,1,19.66,19.66Z"/>
+              </svg>
+          </div>
+          <div class="col-md-3">
+              <input type="text" 
+              class="form-control" 
+              [(ngModel)]="hu"
+              placeholder="Buscar HU"
+              >
+          </div>
+          <div class="col-md-3">
+            <select  
+            class="form-select"
+            [(ngModel)]="module" 
+            >
+            <option disabled selected>Modulo</option>
+            <option *ngFor="let module of modules" [value]="module.id">
+                {{module.description}}
+            </option>
+            </select>
+          </div>
+        </div>
+
         <table class="table table-sm">
             <thead>
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">Historia de usuario</th>
+                <th scope="col" class="width: 20%">Historia de usuario</th>
                 <th scope="col">Modulo</th>
                 <th scope="col">Estado</th>
                 <th scope="col">Editar</th>
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let hu of hus">
+              <tr *ngFor="let hu of hus | tableFilterHu: hu | tableFilterModule: module">
                 <td>{{hu.id}}</td>
                 <td>{{hu.description}}</td>
                 <td>{{hu.module[0].description}}</td>
                 <td><app-status [stage]="hu.status"></app-status></td>
+                <td>
+                 
+                   <app-modal [myHu]="hu" [app]="app"></app-modal>
+                </td>
               </tr>
              
             </tbody>
